--- a/presentation/presentation.org
+++ b/presentation/presentation.org
@@ -1,4 +1,4 @@
-#+TITLE:     Interpreting and Typechecking Simply Typed Lambda Calculus!
+#+TITLE:     Interpreting and Typechecking Simply Typed Lambda Calculus
 #+AUTHOR:    Solomon Bothwell
 #+EMAIL:     ssbothwell@gmail.com
 #+DATE:      2020-03-02
@@ -360,10 +360,79 @@ $(Case\,(S\,n)\,of\,0 \to t_1\,|\,S\,m \to t_2) \longrightarrow [m \mapsto n]t_2
    \TrinaryInfC{$ \Gamma \vdash (Case\, t_0\, of\,0 \to t_1\,|\,(S\, m) \to t_2) : T_1 $}
    \DisplayProof
    \end{prooftree}
-* Typechecking
+* Implementation: Terms and Types
+#+ATTR_LATEX: :options linenos=true, fontsize=\scriptsize
+#+BEGIN_SRC haskell
+data Term = Var String
+          | Abs String Type Term
+          | App Term Term
+          | Z
+          | S Term
+          | Case Term String Term Term
+  deriving (Show, Eq)
+
+data Type = Type :-> Type | Nat
+  deriving (Show, Eq)
+
+type Context = [(String, Type)]
+data TypeErr = TypeError deriving (Show, Eq)
+#+END_SRC
 * Implementation: Typechecker
+#+ATTR_LATEX: :options linenos=true, fontsize=\tiny
+#+BEGIN_SRC haskell
+newtype TypecheckM a =
+  TypecheckM { unTypecheckM :: ExceptT TypeErr (Reader Context) a }
+  deriving (Functor, Applicative, Monad, MonadReader Context, MonadError TypeErr)
+
+runTypecheckM :: TypecheckM Type -> Either TypeErr Type
+runTypecheckM = flip runReader [] . runExceptT . unTypecheckM
+
+typecheck :: Term -> TypecheckM Type
+typecheck = \case
+  Var x -> do
+    ty <- asks $ lookup x
+    maybe (throwError TypeError) pure ty
+  Abs bndr ty1 trm -> do
+    ty2 <- local ((:) (bndr, ty1)) (typecheck trm)
+    pure $ ty1 :-> ty2
+  App t1 t2 -> do
+    ty1 <- typecheck t1
+    case ty1 of
+      tyA :-> tyB -> do
+        ty2 <- typecheck t2
+        if tyB == ty2 then pure ty1 else throwError TypeError
+      _ -> throwError TypeError
+  Z -> pure Nat
+  S n -> do
+    ty <- typecheck n
+    if ty == Nat then pure Nat else throwError TypeError
+  Case t0 bndr t1 t2 -> do
+    ty0 <- typecheck t0
+    ty1 <- typecheck t1
+    ty2 <- local ((:) (bndr, ty1)) (typecheck t2)
+    if ty0 == Nat && ty1 == ty2
+      then pure ty1
+      else throwError TypeError
+#+END_SRC
 * Implementation: Evaluator
-* Thank You!
+#+ATTR_LATEX: :options linenos=true, fontsize=\scriptsize
+#+BEGIN_SRC haskell
+  singleEval :: Term -> Maybe Term
+  singleEval = \case
+    (App (Abs x ty t12) v2) | isVal v2 -> Just $ subst x v2 t12
+    (App v1@Abs{} t2) -> App v1 <$> singleEval t2
+    (App t1 t2) -> flip App t2 <$> singleEval t1
+    (S t) | not (isVal t) -> S <$> singleEval t
+    (Case t0 bndr t1 t2) | not (isVal t0) -> 
+        singleEval t0 >>= \t0' -> pure $ Case t0' bndr t1 t2
+    (Case v1 bndr t1 t2) | v1 == Z -> pure t1
+    (Case (S v1) bndr t1 t2) -> Just $ subst bndr v1 t2
+    _ -> Nothing
+#+END_SRC
+* All Done
+\center
+Thank You!
+https://github.com/ssbothwell/SimplyTypedPresentation/
 # Local Variables:
 # after-save-hook: (org-beamer-export-to-pdf)
 # End:
